# apertium-oci

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-oci.oci.acx  apertium-oci.oci.metadix  apertium-oci.oci.mtx  apertium-oci.oci.prefs.rlx  apertium-oci.oci.rlx  apertium-oci.oci_gascon.prefs.rlx  apertium-oci.pc.in  apertium-oci.post-oci.dix  apertium-oci.pre-post-oci.dix  buscaPar.xsl  configure.ac  lista_adj.xls  lista_noms.xls  modes.xml  new.dix  new.metadix  new1.dix  new2.metadix  new4.metadix  oci.prob  principal.xsl
corpus/: jornalet.10000.txt  jornalet.5000.txt  wikipedia.10000.txt
soscadissas/: a-prepaus-dels-paradigmes.md  post-generacion.md  representacion-d-entradas-lexicalas.md
speller/: editdist.default.txt  index.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: Makefile  README.md  acidnucleic_gascon.raw.txt  acidnucleic_gascon.vislcg.txt  ader_gascon.raw.txt  ader_gascon.vislcg.txt  alejandrolanusse_gascon.raw.txt  alejandrolanusse_gascon.vislcg.txt  amassada_gascon.raw.txt  amassada_gascon.vislcg.txt  atom_gascon.raw.txt  atom_gascon.tagged.txt  atòm.vislcg.txt  aush_gascon.raw.txt  aush_gascon.vislcg.txt  avesac_gascon.raw.txt  avesac_gascon.vislcg.txt  basalexicau_gascon.raw.txt  basalexicau_gascon.vislcg.txt  bastida.raw.txt  bastida.vislcg.txt  bastida_leng.vislcg.txt  bilcato_gascon.raw.txt  bilcato_gascon.vislcg.txt  boisgontier_gascon.raw.txt  boisgontier_gascon.vislcg.txt  bolivia_gascon.raw.txt  bolivia_gascon.vislcg.txt  caraecara_gascon.raw.txt  caraecara_gascon.vislcg.txt  carcassona_ciutat.vislcg.txt  carcassona_leng.raw.txt  carcassona_leng.vislcg.txt  continent.raw.txt  continent.vislcg.txt  continent_leng.tagged.txt  continent_leng.vislcg.txt  cors_aran.raw.txt  cors_aran.tagged.txt  cors_aran.vislcg.txt  (+47 more)
